bundle/tests/scorecard/kuttl/network-policy/02-assert.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestAssert
timeout: 60
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: network-policy-rc
spec:
  ingress:
    - from:
        - namespaceSelector: {}
      ports:
        - port: 8080
          protocol: TCP
        - port: 9090
          protocol: TCP
        - port: 9091
          protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: network-policy-rc
  policyTypes:
    - Ingress
